build: move to nrwl/workspace using angular/jest/cypress

--- a/package.json
+++ b/package.json
@@ -8,7 +8,18 @@
     "deploy": "ng build --prod && npx ngh",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "affected:apps": "./node_modules/.bin/nx affected:apps",
+    "affected:libs": "./node_modules/.bin/nx affected:libs",
+    "affected:build": "./node_modules/.bin/nx affected:build",
+    "affected:e2e": "./node_modules/.bin/nx affected:e2e",
+    "affected:test": "./node_modules/.bin/nx affected:test",
+    "affected:lint": "./node_modules/.bin/nx affected:lint",
+    "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
+    "dep-graph": "./node_modules/.bin/nx dep-graph",
+    "format:write": "./node_modules/.bin/nx format:write",
+    "format:check": "./node_modules/.bin/nx format:check",
+    "prune:branches": "git fetch -p && for branch in `git branch -vv | grep ': gone]' | awk '{print $1}'`; do git branch -D $branch; done"
   },
   "private": true,
   "dependencies": {
@@ -23,31 +34,34 @@
     "@ngrx/effects": "^8.0.1",
     "@ngrx/router-store": "^8.0.1",
     "@ngrx/store": "^8.0.1",
+    "@nrwl/angular": "^8.2.0",
+    "@nrwl/workspace": "^8.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.6",
     "@angular/cli": "~8.0.6",
     "@angular/compiler-cli": "~8.0.3",
+    "@angular-devkit/build-angular": "~0.800.6",
     "@angular/language-service": "~8.0.3",
+    "@nrwl/cypress": "8.2.0",
+    "@nrwl/jest": "8.2.0",
     "@ngrx/store-devtools": "^8.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "^5.0.1",
+    "cypress": "~3.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
     "ts-node": "~7.0.0",
+    "ts-jest": "24.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.4.5"
   }
