--- a/angular.json
+++ b/angular.json
@@ -4,13 +4,13 @@
   "newProjectRoot": "projects",
   "projects": {
     "harri-io": {
-      "root": "",
-      "sourceRoot": "src",
+      "root": "apps/harri-io",
+      "sourceRoot": "apps/harri-io/src",
       "projectType": "application",
       "prefix": "app",
       "schematics": {
-        "@schematics/angular:component": {
-          "style": "sass"
+        "@nrwl/workspace:component": {
+          "style": "scss"
         }
       },
       "architect": {
@@ -18,20 +18,20 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "index": "apps/harri-io/src/index.html",
+            "main": "apps/harri-io/src/main.ts",
+            "polyfills": "apps/harri-io/src/polyfills.ts",
+            "tsConfig": "apps/harri-io/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets",
+              "apps/harri-io/src/favicon.ico",
+              "apps/harri-io/src/assets",
               {
                 "glob": "CNAME",
                 "input": "",
                 "output": "/"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["apps/harri-io/src/styles.scss"],
             "scripts": [],
             "es5BrowserSupport": true
           },
@@ -39,8 +39,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "apps/harri-io/src/environments/environment.ts",
+                  "with": "apps/harri-io/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -59,6 +59,15 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "e2e": {
+              "outputPath": "dist/harri-io-e2e",
+              "fileReplacements": [
+                {
+                  "replace": "apps/harri-io/src/environments/environment.ts",
+                  "with": "apps/harri-io/src/environments/environment.e2e.ts"
+                }
+              ]
             }
           }
         },
@@ -70,6 +79,10 @@
           "configurations": {
             "production": {
               "browserTarget": "harri-io:build:production"
+            },
+            "e2e": {
+              "browserTarget": "harri-io:build:e2e",
+              "port": 4300
             }
           }
         },
@@ -80,21 +93,17 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@nrwl/jest:jest",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
-            "styles": ["src/styles.scss"],
-            "scripts": [],
-            "assets": ["src/favicon.ico", "src/assets"]
+            "jestConfig": "apps/harri-io/jest.config.js",
+            "tsConfig": "apps/harri-io/tsconfig.spec.json",
+            "setupFile": "apps/harri-io/src/test-setup.ts"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "tsConfig": ["tsconfig.app.json", "tsconfig.spec.json"],
             "exclude": ["**/node_modules/**"]
           }
         }
@@ -106,15 +115,11 @@
       "prefix": "",
       "architect": {
         "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+          "builder": "@nrwl/cypress:cypress",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "harri-io:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "harri-io:serve:production"
-            }
+            "cypressConfig": "apps/harri-io-e2e/cypress.json",
+            "tsConfig": "apps/harri-io-e2e/tsconfig.e2e.json",
+            "devServerTarget": "harri-io:serve:e2e"
           }
         },
         "lint": {
@@ -127,5 +132,17 @@
       }
     }
   },
-  "defaultProject": "harri-io"
+  "defaultProject": "harri-io",
+  "schematics": {
+    "@nrwl/angular:application": {
+      "unitTestRunner": "jest",
+      "e2eTestRunner": "cypress"
+    },
+    "@nrwl/angular:library": {
+      "unitTestRunner": "jest"
+    }
+  },
+  "cli": {
+    "defaultCollection": "@nrwl/angular"
+  }
 }
