--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,9 @@
               }
             ],
             "styles": ["apps/harri-io/src/styles.scss"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["apps/harri-io/src/_theming"]
+            },
             "scripts": [],
             "es5BrowserSupport": true
           },
