--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.3",
+    "@angular/cdk": "~8.0.1",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
     "@angular/core": "~8.0.3",
     "@angular/forms": "~8.0.3",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
@@ -37,18 +39,19 @@
     "@nrwl/angular": "^8.2.0",
     "@nrwl/workspace": "^8.2.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.800.6",
     "@angular/cli": "~8.0.6",
     "@angular/compiler-cli": "~8.0.3",
-    "@angular-devkit/build-angular": "~0.800.6",
     "@angular/language-service": "~8.0.3",
+    "@ngrx/store-devtools": "^8.0.1",
     "@nrwl/cypress": "8.2.0",
     "@nrwl/jest": "8.2.0",
-    "@ngrx/store-devtools": "^8.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "24.0.9",
@@ -60,8 +63,8 @@
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
-    "ts-node": "~7.0.0",
     "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.4.5"
   }
