feat: material manifest module

--- a/package.json
+++ b/package.json
@@ -23,21 +23,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.3",
-    "@angular/cdk": "~8.0.1",
-    "@angular/common": "~8.0.3",
-    "@angular/compiler": "~8.0.3",
-    "@angular/core": "~8.0.3",
-    "@angular/forms": "~8.0.3",
-    "@angular/material": "^8.0.1",
-    "@angular/platform-browser": "~8.0.3",
-    "@angular/platform-browser-dynamic": "~8.0.3",
-    "@angular/router": "~8.0.3",
-    "@ngrx/effects": "^8.0.1",
-    "@ngrx/router-store": "^8.0.1",
-    "@ngrx/store": "^8.0.1",
-    "@nrwl/angular": "^8.2.0",
-    "@nrwl/workspace": "^8.2.0",
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/material": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "@ngrx/effects": "^8.0.0",
+    "@ngrx/router-store": "^8.0.0",
+    "@ngrx/store": "^8.0.0",
+    "@nrwl/angular": "8.1.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.2",
@@ -45,21 +44,23 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.6",
-    "@angular/cli": "~8.0.6",
-    "@angular/compiler-cli": "~8.0.3",
-    "@angular/language-service": "~8.0.3",
+    "@angular-devkit/build-angular": "^0.800.0",
+    "@angular/cli": "8.0.3",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
     "@ngrx/store-devtools": "^8.0.1",
-    "@nrwl/cypress": "8.2.0",
-    "@nrwl/jest": "8.2.0",
-    "@types/jasmine": "~2.8.8",
+    "@nrwl/cypress": "8.1.2",
+    "@nrwl/jest": "8.1.2",
+    "@nrwl/workspace": "8.1.2",
+    "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "^5.0.1",
     "cypress": "~3.3.1",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~3.3.0",
+    "jasmine-marbles": "0.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
