--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
+  "newProjectRoot": "",
   "projects": {
     "harri-io": {
       "root": "apps/harri-io",
@@ -135,7 +135,14 @@
       }
     }
   },
-  "defaultProject": "harri-io",
+  "cli": {
+    "warnings": {
+      "typescriptMismatch": false,
+      "versionMismatch": false
+    },
+    "defaultCollection": "@nrwl/angular",
+    "packageManager": "yarn"
+  },
   "schematics": {
     "@nrwl/angular:application": {
       "unitTestRunner": "jest",
@@ -143,9 +150,10 @@
     },
     "@nrwl/angular:library": {
       "unitTestRunner": "jest"
+    },
+    "@nrwl/workspace:component": {
+      "style": "scss"
     }
   },
-  "cli": {
-    "defaultCollection": "@nrwl/angular"
-  }
+  "defaultProject": "harri-io"
 }
