--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dep-graph": "./node_modules/.bin/nx dep-graph",
     "format:write": "./node_modules/.bin/nx format:write",
     "format:check": "./node_modules/.bin/nx format:check",
-    "prune:branches": "git fetch -p && for branch in `git branch -vv | grep ': gone]' | awk '{print $1}'`; do git branch -D $branch; done"
+    "prune:branches": "git fetch -p && for branch in `git branch -vv | grep ': gone]' | awk '{print $1}'`; do git branch -D $branch; done",
+    "nx": "nx"
   },
   "private": true,
   "dependencies": {
@@ -36,7 +37,7 @@
     "@ngrx/effects": "^8.5.0",
     "@ngrx/router-store": "^8.5.0",
     "@ngrx/store": "^8.5.0",
-    "@nrwl/angular": "8.1.2",
+    "@nrwl/angular": "8.7.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.3",
@@ -49,16 +50,16 @@
     "@angular/compiler-cli": "^8.2.13",
     "@angular/language-service": "^8.2.13",
     "@ngrx/store-devtools": "^8.5.0",
-    "@nrwl/cypress": "8.1.2",
-    "@nrwl/jest": "8.1.2",
-    "@nrwl/workspace": "8.1.2",
+    "@nrwl/cypress": "8.7.1",
+    "@nrwl/jest": "8.7.1",
+    "@nrwl/workspace": "8.7.1",
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "^5.0.1",
-    "cypress": "~3.3.1",
+    "cypress": "3.4.0",
     "jasmine-core": "~3.3.0",
     "jasmine-marbles": "0.4.0",
     "jasmine-spec-reporter": "~4.2.1",
