chore: migrate from old POC to new look & feel

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             ],
             "styles": ["apps/harri-io/src/styles.scss"],
             "stylePreprocessorOptions": {
-              "includePaths": ["apps/harri-io/src/_theming"]
+              "includePaths": ["shared-styles", "apps/harri-io/src/_theming"]
             },
             "scripts": [],
             "es5BrowserSupport": true
