--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "paths": {
       "@harri-io/playlist-explorer": ["libs/playlist-explorer/src/index.ts"]
     }
