--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "paths": {
-      "@harri-io/playlist-explorer": ["libs/playlist-explorer/src/index.ts"]
+      "@harri-io/playlist-explorer": ["libs/playlist-explorer/src/index.ts"],
+      "@harri-io/movie-library": ["libs/movie-library/src/index.ts"]
     }
   }
 }
