--- a/apps/harri-io/tsconfig.app.json
+++ b/apps/harri-io/tsconfig.app.json
@@ -1,8 +1,14 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "types": ["node"]
   },
-  "exclude": ["src/test-setup.ts", "**/*.spec.ts"]
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
+  ],
+  "include": [
+    "apps/harri-io/src/**/*.d.ts"
+  ]
 }
