--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "@nrwl/angular": "8.7.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.3",
-    "tslib": "^1.9.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.18",
-    "@angular/cli": "8.3.18",
+    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular/cli": "10.0.0",
     "@angular/compiler-cli": "^10.0.1",
     "@angular/language-service": "^10.0.1",
     "@ngrx/store-devtools": "^8.5.0",
@@ -56,18 +56,18 @@
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "24.0.9",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.5.3",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.2",
     "cypress": "3.4.0",
-    "jasmine-core": "~3.3.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-marbles": "0.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-spec-reporter": "~5.0.0",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "tslint": "~6.1.0",
     "typescript": "~3.9.5",
     "@ngrx/schematics": "8.3.0"
   }
