feat: bump nrwl

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "harri-io",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "nx",
     "start": "ng serve",
     "build": "ng build",
     "deploy": "ng build --prod && npx ngh",
@@ -20,7 +20,8 @@
     "format:write": "./node_modules/.bin/nx format:write",
     "format:check": "./node_modules/.bin/nx format:check",
     "prune:branches": "git fetch -p && for branch in `git branch -vv | grep ': gone]' | awk '{print $1}'`; do git branch -D $branch; done",
-    "nx": "nx"
+    "nx": "nx",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points && node ./decorate-angular-cli.js"
   },
   "private": true,
   "dependencies": {
@@ -38,9 +39,9 @@
     "@ngrx/entity": "9.2.0",
     "@ngrx/router-store": "^9.2.0",
     "@ngrx/store": "^9.2.0",
-    "@nrwl/angular": "8.7.1",
+    "@nrwl/angular": "9.4.5",
     "core-js": "^2.5.4",
-    "rxjs": "~6.5.3",
+    "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -50,22 +51,22 @@
     "@angular/compiler-cli": "^10.0.1",
     "@angular/language-service": "^10.0.1",
     "@ngrx/store-devtools": "^9.2.0",
-    "@nrwl/cypress": "8.7.1",
-    "@nrwl/jest": "8.7.1",
-    "@nrwl/workspace": "8.7.1",
+    "@nrwl/cypress": "9.4.5",
+    "@nrwl/jest": "9.4.5",
+    "@nrwl/workspace": "9.4.5",
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jest": "24.0.9",
+    "@types/jest": "25.1.4",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "^5.1.2",
-    "cypress": "3.4.0",
+    "cypress": "^3.8.2",
     "jasmine-core": "~3.5.0",
     "jasmine-marbles": "0.4.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "jest": "24.1.0",
-    "jest-preset-angular": "7.0.0",
-    "ts-jest": "24.0.0",
+    "jest": "25.2.4",
+    "jest-preset-angular": "8.1.3",
+    "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5",
