--- a/angular.json
+++ b/angular.json
@@ -110,14 +110,21 @@
           "options": {
             "jestConfig": "apps/harri-io/jest.config.js",
             "tsConfig": "apps/harri-io/tsconfig.spec.json",
-            "setupFile": "apps/harri-io/src/test-setup.ts"
+            "setupFile": "apps/harri-io/src/test-setup.ts",
+            "passWithNoTests": true
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["tsconfig.app.json", "tsconfig.spec.json"],
-            "exclude": ["**/node_modules/**", "!apps/harri-io/**"]
+            "tsConfig": [
+              "tsconfig.app.json",
+              "tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/harri-io/**/*"
+            ]
           }
         }
       }
@@ -139,7 +146,10 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": ["**/node_modules/**", "!e2e/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!e2e/**"
+            ]
           }
         }
       }
@@ -157,7 +167,10 @@
               "libs/playlist-explorer/tsconfig.lib.json",
               "libs/playlist-explorer/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/playlist-explorer/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/playlist-explorer/**/*"
+            ]
           }
         },
         "test": {
@@ -165,7 +178,8 @@
           "options": {
             "jestConfig": "libs/playlist-explorer/jest.config.js",
             "tsConfig": "libs/playlist-explorer/tsconfig.spec.json",
-            "setupFile": "libs/playlist-explorer/src/test-setup.ts"
+            "setupFile": "libs/playlist-explorer/src/test-setup.ts",
+            "passWithNoTests": true
           }
         }
       },
@@ -188,7 +202,10 @@
               "libs/movie-library/tsconfig.lib.json",
               "libs/movie-library/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/movie-library/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/movie-library/**/*"
+            ]
           }
         },
         "test": {
@@ -196,7 +213,8 @@
           "options": {
             "jestConfig": "libs/movie-library/jest.config.js",
             "tsConfig": "libs/movie-library/tsconfig.spec.json",
-            "setupFile": "libs/movie-library/src/test-setup.ts"
+            "setupFile": "libs/movie-library/src/test-setup.ts",
+            "passWithNoTests": true
           }
         }
       },
