--- a/nx.json
+++ b/nx.json
@@ -9,16 +9,34 @@
   },
   "projects": {
     "harri-io": {
-      "tags": ["app"]
+      "tags": [
+        "app"
+      ]
     },
     "harri-io-e2e": {
-      "tags": []
+      "tags": [],
+      "implicitDependencies": [
+        "harri-io"
+      ]
     },
     "playlist-explorer": {
       "tags": []
     },
     "movie-library": {
       "tags": []
+    }
+  },
+  "tasksRunnerOptions": {
+    "default": {
+      "runner": "@nrwl/workspace/tasks-runners/default",
+      "options": {
+        "cacheableOperations": [
+          "build",
+          "lint",
+          "test",
+          "e2e"
+        ]
+      }
     }
   }
 }
