--- a/package.json
+++ b/package.json
@@ -25,31 +25,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.1",
-    "@angular/cdk": "^10.0.0",
-    "@angular/common": "^10.0.1",
-    "@angular/compiler": "^10.0.1",
-    "@angular/core": "^10.0.1",
-    "@angular/forms": "^10.0.1",
-    "@angular/material": "^10.0.0",
-    "@angular/platform-browser": "^10.0.1",
-    "@angular/platform-browser-dynamic": "^10.0.1",
-    "@angular/router": "^10.0.1",
+    "@angular/animations": "^9.0.0",
+    "@angular/cdk": "^9.0.0",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/forms": "^9.0.0",
+    "@angular/material": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/router": "^9.0.0",
     "@ngrx/effects": "^9.2.0",
     "@ngrx/entity": "9.2.0",
     "@ngrx/router-store": "^9.2.0",
     "@ngrx/store": "^9.2.0",
     "@nrwl/angular": "9.4.5",
     "core-js": "^2.5.4",
+    "harri-publishable-library": "^0.0.2",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "10.0.0",
-    "@angular/compiler-cli": "^10.0.1",
+    "@angular-devkit/build-angular": "0.901.0",
+    "@angular/cli": "9.1.0",
+    "@angular/compiler-cli": "^9.0.0",
     "@angular/language-service": "^10.0.1",
+    "@ngrx/schematics": "9.2.0",
     "@ngrx/store-devtools": "^9.2.0",
     "@nrwl/cypress": "9.4.5",
     "@nrwl/jest": "9.4.5",
@@ -69,7 +71,6 @@
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5",
-    "@ngrx/schematics": "9.2.0"
+    "typescript": "~3.8.3"
   }
 }
