--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,13 +12,24 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2018",
+      "dom",
+      "esnext.asynciterable"
+    ],
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "paths": {
-      "@harri-io/playlist-explorer": ["libs/playlist-explorer/src/index.ts"],
-      "@harri-io/movie-library": ["libs/movie-library/src/index.ts"]
-    }
+      "@harri-io/playlist-explorer": [
+        "libs/playlist-explorer/src/index.ts"
+      ],
+      "@harri-io/movie-library": [
+        "libs/movie-library/src/index.ts"
+      ]
+    },
+    "allowSyntheticDefaultImports": true
   }
 }
