--- a/package.json
+++ b/package.json
@@ -35,19 +35,19 @@
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
+    "@apollo/client": "^3.0.0",
     "@ngrx/effects": "^9.2.0",
     "@ngrx/entity": "9.2.0",
     "@ngrx/router-store": "^9.2.0",
     "@ngrx/store": "^9.2.0",
     "@nrwl/angular": "9.4.5",
+    "apollo-angular": "^2.0.3",
     "core-js": "^2.5.4",
+    "graphql": "^15.0.0",
     "harri-publishable-library": "^0.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "apollo-angular": "^2.0.3",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^15.0.0"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.0",
@@ -71,6 +71,7 @@
     "jasmine-spec-reporter": "~5.0.0",
     "jest": "25.2.4",
     "jest-preset-angular": "8.1.3",
+    "prettier": "^2.3.2",
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
