--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "nx",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "ng build --prod && npx ngh",
+    "deploy": "ng build --configuration production && npx ngh",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -50,8 +50,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.0",
-    "@angular/cli": "9.1.0",
+    "@angular-devkit/build-angular": "12.1.0",
+    "@angular/cli": "12.1.0",
     "@angular/compiler-cli": "^12.1.0",
     "@angular/language-service": "^12.1.0",
     "@ngrx/schematics": "9.2.0",
@@ -59,14 +59,14 @@
     "@nrwl/cypress": "12.5.0",
     "@nrwl/jest": "12.5.0",
     "@nrwl/workspace": "12.5.0",
-    "@types/jasmine": "~3.3.0",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "26.0.8",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.5.3",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "cypress": "^3.8.2",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-marbles": "0.4.0",
     "jasmine-spec-reporter": "~5.0.0",
     "jest": "26.2.2",
