--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,35 @@
-/*
-  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
-  It is not intended to be used to perform a compilation.
-
-  To learn more about this file see: https://angular.io/config/solution-tsconfig.
-*/
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./apps/harri-io/tsconfig.app.json"
+  "compileOnSave": false,
+  "compilerOptions": {
+    "baseUrl": "./",
+    "downlevelIteration": true,
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
+    "declaration": false,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "target": "es2015",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2018",
+      "dom",
+      "esnext.asynciterable"
+    ],
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "paths": {
+      "@harri-io/playlist-explorer": [
+        "libs/playlist-explorer/src/index.ts"
+      ],
+      "@harri-io/movie-library": [
+        "libs/movie-library/src/index.ts"
+      ]
     },
-    {
-      "path": "./apps/harri-io/tsconfig.spec.json"
-    },
-    {
-      "path": "./apps/harri-io-e2e/tsconfig.e2e.json"
-    },
-    {
-      "path": "./e2e/tsconfig.e2e.json"
-    },
-    {
-      "path": "./libs/playlist-explorer/tsconfig.spec.json"
-    },
-    {
-      "path": "./libs/movie-library/tsconfig.spec.json"
-    }
-  ]
+    "allowSyntheticDefaultImports": true
+  }
 }
