--- a/package.json
+++ b/package.json
@@ -44,28 +44,36 @@
     "apollo-angular": "^2.0.3",
     "core-js": "^2.5.4",
     "graphql": "^15.0.0",
-    "harri-publishable-library": "^0.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.1.0",
+    "@angular-eslint/eslint-plugin": "~12.0.0",
+    "@angular-eslint/eslint-plugin-template": "~12.0.0",
+    "@angular-eslint/template-parser": "~12.0.0",
     "@angular/cli": "12.1.0",
     "@angular/compiler-cli": "^12.1.0",
     "@angular/language-service": "^12.1.0",
     "@ngrx/schematics": "12.2.0",
     "@ngrx/store-devtools": "^12.2.0",
     "@nrwl/cypress": "12.5.0",
+    "@nrwl/eslint-plugin-nx": "12.5.0",
     "@nrwl/jest": "12.5.0",
+    "@nrwl/linter": "12.5.0",
     "@nrwl/workspace": "12.5.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "26.0.8",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "angular-cli-ghpages": "^0.5.3",
     "codelyzer": "^6.0.0",
     "cypress": "^3.8.2",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-marbles": "0.4.0",
     "jasmine-spec-reporter": "~5.0.0",
