--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
     "@ngrx/entity": "12.2.0",
     "@ngrx/router-store": "^12.2.0",
     "@ngrx/store": "^12.2.0",
+    "@ngstack/code-editor": "^3.1.0",
     "@nrwl/angular": "12.5.0",
     "apollo-angular": "^2.0.3",
     "core-js": "^2.5.4",
+    "generate-avatar": "^1.4.10",
     "graphql": "^15.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -67,6 +70,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "26.0.8",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
     "angular-cli-ghpages": "^0.5.3",
